--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ nav ul li a:hover::after{
     margin-top:15%;
     line-height: 1.3;
     margin-bottom: 15%;
-    /* background-image: url('style_imgs/bg-code-1.png'); */
+    /* background-image: url('style_imgs/bg-code-1.jpeg'); */
 }
 .code-bg img{
     position: absolute;
