--- a/style.css
+++ b/style.css
@@ -92,8 +92,10 @@ nav ul li a:hover::after{
     filter: blur(4px);
     z-index: -1;
     /* left: 30%; */
-    background-size: cover;
+    background-size: contain;
 }
+
+<-------------------- ABOUT ME -------------------------->
 .header-text h1{
     font-size: 110px;
     text-shadow: 2px 2px #000;
